finalizar section intro

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,60 +1,56 @@
 #intro {
     width: 1366px;
     height: 750px;
-    background-image: url(/assets/Background_Contacts.png);
-    background-size: cover;
-    display: flex;
+    background-image: url(/assets/images/Background_Intro.png);
 }
+
 
 #info {
-    margin: 120px 163px 183px 163px;
+    &:img {
+        margin-bottom: 56px;
+    };
+    text-align: center;
+    width: 1040;
+    padding: 120px 163px 183px 163px;
 }
-
-
-
-#logo img {
-    width: 24px;
-    height: 24px;
+ 
+#logos {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
 }
 
 .profile-pic {
-    height: 112px;
+    margin-bottom: 56px;
     width: 112px;
-    border-radius: 50%;
+    aspect-ratio: 1/1;
     object-fit: cover;
+    border-radius: 50%;
+    offset-position: top;
+    border: solid 2px var(--color-red);
 }
 
-#LogoGit {
-    color: var(--color-blue);
+.code-logo {
+    position: absolute;
+    width: 32px;
+    aspect-ratio: 1/1; 
+    right: 610px;
+    top: 195px
 }
 
-#LogoHTML {
-    color: var(--color-red);
+figure {
+    display: flex;
+    height: 40px;
+    margin-top: 80px;
+    padding: 8px 16px;
+    gap: 8px;
+    align-items: center;
+    /* border: solid 2px red; */
+    border-radius: 24px;
+    background-color: var(--color-base-gray300);
 }
 
-#LogoCSS {
-
+footer {
+    margin-top: 94px;
+    text-align: center;
 }
-
-#LogoJS {
-
-}
-
-#LogoReact {
-
-}
-
-#LogoNode {
-
-}
-
-
-
-
-
-
-
-
-
-
-
