--- a/styles/global.css
+++ b/styles/global.css
@@ -2,11 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
     width: 1366px;
     height: 2934px;
+    background-color: var(--background-color);
 }
 
 :root {
+    --background-color: #16181D;
     --color-red: #E3646E;
     --color-purple: #BB72E9;
     --color-blue: #3996DB;
@@ -17,66 +22,60 @@
     --color-base-gray200: #16181D;
     --color-base-gray300: #292C34;
     --color-base-gray400: #878EA1;
-    --color-base-gray500: #C0C4CE;
+    --color-base-gray500: #a5a9b3;
     --color-base-gray600: #E2E4E9;
 
     --font-family-title: "Asap", sans-serif;
-    --tittle-lg: bold 120% 56px var(--font-family-title);
-    --tittle-md: bold 120% 24px var(--font-family-title);
-    --tittle-sm: bold 120% 16px var(--font-family-title);
+    --title-lg: bold 56px/120% var(--font-family-title);
+    --title-md: bold 24px/120% var(--font-family-title);
+    --title-sm: bold 16px/120% var(--font-family-title);
 
     --font-family-subtitle: "Inconsolata", monospace;
-    --subtitle: 120% 20px var(--font-family-subtitle);
+    --subtitle: 20px/120% var(--font-family-subtitle);
 
     --font-family-text: "Maven Pro", sans-serif;
-    --text-md: 140% 16px var(--font-family-text);
-    --text-sm: 140% 14px var(--font-family-text);
+    --text-md: 16px/140% var(--font-family-text);
+    --text-sm: 14px/140% var(--font-family-text);
 }
 
 h1 {
-    font: var(--font-family-title);
-    font-size: var(--tittle-lg);
+    font: var(--title-lg);
     color: var(--color-base-gray600);
+    margin-bottom: 20px;
 }
 
 h2 {
-    font: var(--font-family-title);
-    font-size: var(--tittle-md);
+    font: var(--title-md);
     color: var(--color-base-gray600);
 }
 
 h3 {
-    font: var(--font-family-title);
-    font-size: var(--tittle-sm);
+    font: var(--title-sm);
     color: var(--color-base-gray600);
 }
 
 .text-sm {
-    font: var(--font-family-text);
-    font-size: var(--text-sm);
+    font: var(--text-sm);
     color: var(--color-base-gray400);
 }
 
 .text-md {
-    font: var(--font-family-text);
-    font-size: var(--text-md);
+    font: var(--text-md);
     color: var(--color-base-gray500);
 }
 
 .subtitle {
-    font: var(--font-family-subtitle);
-    font-size: var(--subtitle);
+    font: var(--subtitle);
     color: var(--color-base-gray500);
+    margin-bottom: 8px;
 }
 
 .text-red {
-    font: var(--font-family-subtitle);
-    font-size: var(--subtitle);
+    font: var(--subtitle);
     color: var(--color-red);
 }
 
 .text-purple {
-    font: var(--font-family-subtitle);
-    font-size: var(--subtitle);
+    font: var(--subtitle);
     color: var(--color-purple);
 }
