--- a/styles/intro.css
+++ b/styles/intro.css
@@ -2,13 +2,11 @@
     width: 1366px;
     height: 750px;
     background-image: url(/assets/images/Background_Intro.png);
+    background-size: cover;
 }
 
 
 #info {
-    &:img {
-        margin-bottom: 56px;
-    };
     text-align: center;
     width: 1040;
     padding: 120px 163px 183px 163px;
@@ -52,5 +50,6 @@ figure {
 
 footer {
     margin-top: 94px;
+    margin-bottom: 57px;
     text-align: center;
 }
