--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,5 @@
 @import url(global.css);
+@import url(utility.css);
 @import url(intro.css);
 @import url(projects.css);
+@import url(services.css);
