--- a/styles/utility.css
+++ b/styles/utility.css
@@ -10,3 +10,10 @@
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.gap-16 {
+    gap: 16px;
+}
+
+.grid-4-row {
+    grid-template-rows: repeat(4, auto);
+}
