--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,7 +10,7 @@
         margin-block: 8px;
     }
 
-    background-image: url(/assets/images/Background_Contacts.png);
+    background-image: url(../assets/images/Background_Contacts.png);
     background-size: cover;
 }
 
