--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,7 +1,7 @@
 #intro {
     width: 1366px;
     height: 750px;
-    background-image: url(/assets/images/Background_Intro.png);
+    background-image: url(../assets/images/Background_Intro.png);
     background-size: cover;
 }
 
